fix: sonar qube issues